# scipy-stubs

./: .editorconfig  .libcst.codemod.yaml  .markdownlint.yaml  .mdformat.toml  .mypyignore  .mypyignore-todo  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  codemods.py  justfile  pyproject.toml  stubtest.txt  tox.toml
.github/: CODE_OF_CONDUCT.md  dependabot.yml  release.yml
.github/workflows/: ci.yml  publish-pypi.yml
codegen/: README.md  mods.py  ufuncs.py
pytests/test_tools/: test_fetch_minimum_requirements.py
scipy-stubs/: __config__.pyi  __init__.pyi  _typing.pyi  version.pyi
scipy-stubs/_lib/: __init__.pyi  _array_api.pyi  _bunch.pyi  _ccallback.pyi  _disjoint_set.pyi  _docscrape.pyi  _elementwise_iterative_method.pyi  _finite_differences.pyi  _gcutils.pyi  _pep440.pyi  _testutils.pyi  _threadsafety.pyi  _tmpdirs.pyi  _util.pyi  decorator.pyi  deprecation.pyi  doccer.pyi  uarray.pyi
scipy-stubs/cluster/: __init__.pyi  hierarchy.pyi  vq.pyi
scipy-stubs/constants/: __init__.pyi  _codata.pyi  _constants.pyi  codata.pyi  constants.pyi
scipy-stubs/datasets/: __init__.pyi  _download_all.pyi  _fetchers.pyi  _registry.pyi  _typing.pyi  _utils.pyi
scipy-stubs/differentiate/: __init__.pyi  _differentiate.pyi
scipy-stubs/fft/: __init__.pyi  _backend.pyi  _basic.pyi  _basic_backend.pyi  _debug_backends.pyi  _fftlog.pyi  _fftlog_backend.pyi  _helper.pyi  _realtransforms.pyi  _realtransforms_backend.pyi
scipy-stubs/fftpack/: __init__.pyi  _basic.pyi  _helper.pyi  _pseudo_diffs.pyi  _realtransforms.pyi  basic.pyi  convolve.pyi  helper.pyi  pseudo_diffs.pyi  realtransforms.pyi
scipy-stubs/integrate/: __init__.pyi  _bvp.pyi  _cubature.pyi  _ode.pyi  _odepack_py.pyi  _quad_vec.pyi  _quadpack_py.pyi  _quadrature.pyi  _tanhsinh.pyi  _typing.pyi  lsoda.pyi  odepack.pyi  quadpack.pyi
scipy-stubs/interpolate/: __init__.pyi  _aaa.pyi  _bary_rational.pyi  _bsplines.pyi  _cubic.pyi  _dfitpack.pyi  _fitpack2.pyi  _fitpack_impl.pyi  _fitpack_py.pyi  _fitpack_repro.pyi  _interpnd.pyi  _interpolate.pyi  _ndbspline.pyi  _ndgriddata.pyi  _pade.pyi  _polyint.pyi  _rbf.pyi  _rbfinterp.pyi  _rbfinterp_pythran.pyi  _rgi.pyi  dfitpack.pyi  fitpack.pyi  fitpack2.pyi  interpnd.pyi  interpolate.pyi  ndgriddata.pyi  polyint.pyi  rbf.pyi
scipy-stubs/io/: __init__.pyi  _fortran.pyi  _idl.pyi  _mmio.pyi  _netcdf.pyi  harwell_boeing.pyi  idl.pyi  mmio.pyi  netcdf.pyi  wavfile.pyi
scipy-stubs/linalg/: __init__.pyi  _basic.pyi  _cython_signature_generator.pyi  _cythonized_array_utils.pyi  _decomp.pyi  _decomp_cholesky.pyi  _decomp_cossin.pyi  _decomp_ldl.pyi  _decomp_lu.pyi  _decomp_lu_cython.pyi  _decomp_polar.pyi  _decomp_qr.pyi  _decomp_qz.pyi  _decomp_schur.pyi  _decomp_svd.pyi  _decomp_update.pyi  _expm_frechet.pyi  _generate_pyx.pyi  _matfuncs.pyi  _matfuncs_expm.pyi  _matfuncs_inv_ssq.pyi  _matfuncs_sqrtm.pyi  _matfuncs_sqrtm_triu.pyi  _misc.pyi  _procrustes.pyi  _sketches.pyi  _solve_toeplitz.pyi  _solvers.pyi  _special_matrices.pyi  _testutils.pyi  basic.pyi  blas.pyi  cython_blas.pyi  cython_lapack.pyi  decomp.pyi  decomp_cholesky.pyi  decomp_lu.pyi  decomp_qr.pyi  decomp_schur.pyi  decomp_svd.pyi  (+5 more)
scipy-stubs/misc/: __init__.pyi  _common.pyi  common.pyi  doccer.pyi
scipy-stubs/ndimage/: __init__.pyi  _dispatchers.pyi  _filters.pyi  _fourier.pyi  _interpolation.pyi  _measurements.pyi  _morphology.pyi  _ni_docstrings.pyi  _ni_support.pyi  _support_alternative_backends.pyi  _typing.pyi  filters.pyi  fourier.pyi  interpolation.pyi  measurements.pyi  morphology.pyi
scipy-stubs/odr/: __init__.pyi  _models.pyi  _odrpack.pyi  models.pyi  odrpack.pyi
scipy-stubs/optimize/: __init__.pyi  _basinhopping.pyi  _chandrupatla.pyi  _cobyla_py.pyi  _constraints.pyi  _dcsrch.pyi  _differentiable_functions.pyi  _differentialevolution.pyi  _direct_py.pyi  _dual_annealing.pyi  _elementwise.pyi  _group_columns.pyi  _hessian_update_strategy.pyi  _isotonic.pyi  _lbfgsb_py.pyi  _linesearch.pyi  _linprog.pyi  _linprog_highs.pyi  _linprog_ip.pyi  _linprog_rs.pyi  _linprog_simplex.pyi  _linprog_util.pyi  _lsap.pyi  _milp.pyi  _minimize.pyi  _minpack_py.pyi  _nnls.pyi  _nonlin.pyi  _numdiff.pyi  _optimize.pyi  _qap.pyi  _remove_redundancy.pyi  _root.pyi  _root_scalar.pyi  _shgo.pyi  _slsqp_py.pyi  _tnc.pyi  _trustregion.pyi  _trustregion_dogleg.pyi  _trustregion_exact.pyi  (+15 more)
scipy-stubs/signal/: __init__.pyi  _arraytools.pyi  _bsplines.pyi  _czt.pyi  _filter_design.pyi  _fir_filter_design.pyi  _lti_conversion.pyi  _ltisys.pyi  _max_len_seq.pyi  _peak_finding.pyi  _peak_finding_utils.pyi  _savitzky_golay.pyi  _short_time_fft.pyi  _signaltools.pyi  _spectral.pyi  _spectral_py.pyi  _spline.pyi  _spline_filters.pyi  _upfirdn.pyi  _waveforms.pyi  _wavelets.pyi  bsplines.pyi  filter_design.pyi  fir_filter_design.pyi  lti_conversion.pyi  ltisys.pyi  signaltools.pyi  spectral.pyi  spline.pyi  waveforms.pyi  wavelets.pyi
scipy-stubs/sparse/: __init__.pyi  _base.pyi  _bsr.pyi  _compressed.pyi  _construct.pyi  _coo.pyi  _csc.pyi  _csr.pyi  _data.pyi  _dia.pyi  _dok.pyi  _extract.pyi  _generate_sparsetools.pyi  _index.pyi  _lil.pyi  _matrix.pyi  _matrix_io.pyi  _spfuncs.pyi  _sputils.pyi  _typing.pyi  base.pyi  bsr.pyi  compressed.pyi  construct.pyi  coo.pyi  csc.pyi  csr.pyi  data.pyi  dia.pyi  dok.pyi  extract.pyi  lil.pyi
scipy-stubs/spatial/: __init__.pyi  _ckdtree.pyi  _geometric_slerp.pyi  _kdtree.pyi  _plotutils.pyi  _procrustes.pyi  _qhull.pyi  _spherical_voronoi.pyi  _voronoi.pyi  ckdtree.pyi  distance.pyi  kdtree.pyi  qhull.pyi
scipy-stubs/special/: __init__.pyi  _add_newdocs.pyi  _basic.pyi  _ellip_harm.pyi  _lambertw.pyi  _logsumexp.pyi  _mptestutils.pyi  _multiufuncs.pyi  _orthogonal.pyi  _sf_error.pyi  _spfun_stats.pyi  _spherical_bessel.pyi  _support_alternative_backends.pyi  _test_internal.pyi  _ufuncs.pyi  basic.pyi  cython_special.pyi  orthogonal.pyi  sf_error.pyi  specfun.pyi  spfun_stats.pyi
scipy-stubs/stats/: __init__.pyi  (+62 more)
scripts/: generate_matrix.py  version_bounds.py
tests/: README.md  mypy_allowlist.txt
tools/: fetch_minimum_requirements.py
(+255 files in other folders)
